--- a/國禎履歷.html
+++ b/國禎履歷.html
@@ -65,6 +65,8 @@
                 <br>
                 想到將來自己設計的網頁有機會被許多人看到，就更有動力向前邁進
             </p>
+            <br>
+            <p class="skill">Html | Css | Javascript | Bootstrap5 | Python</p>
         </div>
     </div>
     <hr>
